--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ a {
   text-decoration: none;
 }
 
+.loader {
+  display: none;
+}
+
 .platsindex {
   background-color: #f3f0f0;
   display: flex;
@@ -39,13 +43,13 @@ a {
   height: 300px;
   overflow: hidden;
   margin: 10px 0px;
-}
-.platsindex .photoindex .verticale img {
-  position: absolute;
-  top: -50%;
+  /*.verticale img{
+      @include verticale;
+  }*/
 }
 .platsindex .photoindex img {
   width: 100%;
+  object-position: left bottom;
 }
 .platsindex .photoindex .name_index {
   background-color: #fff;
@@ -81,15 +85,13 @@ a {
   width: 100%;
   text-align: center;
   vertical-align: text-top;
-  position: relative;
   color: #353535;
   font-weight: 600;
   font-size: 1.1em;
   padding: 20px;
 }
 .localisation i {
-  position: absolute;
-  left: 30%;
+  padding-right: 10px;
 }
 
 .presentation {
@@ -113,8 +115,27 @@ a {
   color: #000;
 }
 
-#fonctionnement {
+/*fonctionnement*/
+.fonctionnement {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+}
+.fonctionnement #fonctionnement {
   padding-left: 15px;
+}
+.fonctionnement .contentbox {
+  text-align: center;
+  overflow: visible;
+  position: relative;
+  background-color: rgba(250, 250, 250, 0.623);
+  align-content: space-around;
+  height: 50px;
+  align-items: center;
+  box-shadow: 0px 1px 1px -1px #000;
+}
+.fonctionnement .skin {
+  background-color: #ffdff6;
 }
 
 footer {
@@ -143,7 +164,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 75px;
+  height: 80px;
   position: relative;
 }
 header i {
@@ -153,13 +174,15 @@ header i {
   color: #555;
   font-size: 1.5em;
 }
-header .header {
-  box-shadow: 0px 2px 5px 2px #a8a8a8;
+
+.header {
+  box-shadow: 0px 2px 5px 6px #a8a8a8;
   /*ajouter l'ombre sous le titre*/
   margin: 7px 0px;
 }
 
 .photoresto {
+  height: 250px;
   overflow: hidden;
 }
 .photoresto img {
@@ -177,17 +200,20 @@ header .header {
 .photoresto figcaption {
   position: relative;
 }
-.photoresto figcaption i {
+.photoresto figcaption .heart {
   position: absolute;
   right: 9%;
-  top: 37%;
-  font-size: 0.8em;
+  top: 23%;
+  font-size: 0.85em;
   font-weight: 100;
+  border: none;
+  background-color: transparent;
 }
 
-/*.verticale img{
-    @include verticale;
-}*/
+.verticale img {
+  object-position: 50% 50%;
+}
+
 .contentbox {
   display: flex;
   flex-direction: column;
@@ -212,11 +238,16 @@ header .header {
   font-size: 1.2em;
   font-weight: 500;
 }
+.contentbox.menu .texte {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
 .contentbox .price {
   position: absolute;
-  right: 0;
-  bottom: 0;
-  transform: translate(-50%, -50%);
+  right: 5%;
+  bottom: 20%;
+  transition: transform 1300ms;
 }
 .contentbox i {
   font-size: 1.1em;
@@ -242,24 +273,6 @@ header .header {
 }
 .contentbox i.fa-store {
   color: #9356DC;
-}
-
-.fonctionnement {
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-}
-
-.fontionnement .contentbox {
-  position: relative;
-  background-color: rgba(250, 250, 250, 0.623);
-  align-content: space-around;
-  height: 50px;
-  align-items: center;
-  box-shadow: 0px 1px 1px -1px #000;
-}
-.fontionnement .contentbox .skin {
-  background-color: #ffdff6;
 }
 
 main h3 {
@@ -297,12 +310,8 @@ em {
   padding: 20px 0px;
 }
 
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 865px) {
   /*général*/
-  html {
-    margin: 0px 5%;
-  }
-
   body, main {
     flex-flow: row wrap;
     flex-basis: 50%;
@@ -310,6 +319,7 @@ em {
 
   main.grid {
     flex-basis: 100%;
+    margin-left: 5%;
   }
 
   header, footer {
@@ -321,6 +331,7 @@ em {
     text-align: center;
     width: 100%;
     flex-basis: 50%;
+    height: auto;
   }
   .photoresto .name {
     border: 2px solid #99E2D0;
@@ -334,6 +345,9 @@ em {
     top: 30%;
   }
 
+  /*.button{
+
+  }*/
   /*contentbox*/
   .contentbox.menu {
     flex-flow: column;
@@ -365,6 +379,9 @@ em {
   .grid .platsindex {
     grid-area: platsindex;
   }
+  .grid .photoindex {
+    height: 500px;
+  }
 
   /* footer */
   footer {
@@ -373,6 +390,28 @@ em {
     padding: 30px 5% 50px 5%;
   }
 }
+@keyframes spinner {
+  0% {
+    transform: scale(1.5) rotate(0deg);
+  }
+  50% {
+    transform: scale(1) rotate(720deg);
+  }
+  100% {
+    transform: scale(2) rotate(1080deg);
+  }
+}
+/*@keyframes loader{
+    0%{
+        opacity: 1;
+    }
+    99%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+    }
+}*/
 @keyframes slideUp {
   from {
     transform: translateY(100%);
@@ -386,10 +425,25 @@ em {
 @keyframes slideLeft {
   from {
     transform: translateX(100%);
-    background-color: #99E2D0;
   }
   to {
     transform: translateX(0%);
+  }
+}
+@keyframes slidePrice {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-200%);
+  }
+}
+@keyframes ellipsis {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 70%;
   }
 }
 .button:hover, .back:hover {
@@ -398,31 +452,71 @@ em {
   box-shadow: 0px 1px 1px 0px #000;
 }
 
-i {
-  overflow: hidden;
+@keyframes allofheart {
+  0% {
+    font-weight: 300;
+    color: linear-gradient(160deg, #FF79DA 2%, #9356DC);
+    opacity: 0.2;
+  }
+  30% {
+    font-weight: 400;
+    color: #9356DC;
+    opacity: 0.3;
+  }
+  40% {
+    font-weight: 500;
+    color: #9356DC;
+    opacity: 0.4;
+  }
+  50% {
+    font-weight: 600;
+    color: #9356DC;
+    opacity: 0.5;
+  }
+  60% {
+    font-weight: 700;
+    color: #9356DC;
+    opacity: 0.6;
+  }
+  70% {
+    font-weight: 800;
+    color: #9356DC;
+    opacity: 0.7;
+  }
+  80% {
+    font-weight: 900;
+    color: #9356DC;
+    opacity: 0.85;
+  }
+  100% {
+    font-weight: 900;
+    color: #9356DC;
+    opacity: 1;
+  }
 }
-
 .fa-heart {
-  overflow: hidden;
   position: relative;
   z-index: 0;
 }
 
-/*il faudra un nom qui remplace le span coeur {
-    transition: all 2s ease-out 0s;
-    background-color: $primary-color;
-    width: 0;
-    height: 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-}*/
-.fa-heart:hover span {
-  height: 100%;
-  width: 100%;
+.fa-heart:hover {
+  animation: allofheart 1.5s ease-out forwards;
 }
 
+/*.fa-heart .heart{
+    background-color: $primary-color;
+    height: 0%;
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all 2s ease-out;
+    z-index: -1;
+}
+
+.fa-heart:hover .heart{
+    height: 100%;
+}*/
 .contentbox.menu:hover {
   box-shadow: 0px 1px 1px 0px #000;
 }
@@ -441,21 +535,63 @@ i {
 
 .acheck {
   position: absolute;
-  width: 100px;
+  width: 60px;
   height: 60px;
   right: 0%;
   padding: 10px;
-  /*transform: translateX(100%);*/
+  transform: translateX(100%);
   background-color: #99E2D0;
   font-size: 1.5em;
-  text-align: center;
+  z-index: 1;
 }
 .acheck .check {
+  position: absolute;
+  top: 25%;
+  left: 25%;
   visibility: visible;
   width: auto;
-}
-.acheck i {
+  transition: transform 1000ms;
   color: #fff;
+  font-size: 1.5em;
+}
+
+.contentbox.menu:hover .acheck {
+  animation: slideLeft 700ms linear forwards;
+}
+.contentbox.menu:hover .price {
+  animation: slidePrice 500ms linear forwards;
+}
+.contentbox.menu:hover .check {
+  transform: rotate(-3turn);
+}
+.contentbox.menu:hover .texte {
+  animation: ellipsis 400ms forwards;
+}
+
+.loader {
+  animation: loader 3s;
+  margin: 0;
+  background: linear-gradient(160deg, #FF79DA 2%, #9356DC);
+  z-index: 9998;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.spinner {
+  animation: spinner 2700ms forwards 150ms;
+  z-index: 9999;
+  border: 3px solid #99E2D0;
+  border-radius: 50px;
+  width: 100px;
+  height: 20px;
+  font-family: "Shrikhand";
+  font-weight: 500;
+  font-size: 1em;
 }
 
 /*# sourceMappingURL=style.css.map */
