--- a/style.css
+++ b/style.css
@@ -40,16 +40,16 @@ a {
 .platsindex .photoindex {
   border-radius: 25px;
   position: relative;
-  height: 300px;
+  height: 320px;
   overflow: hidden;
   margin: 10px 0px;
-  /*.verticale img{
-      @include verticale;
-  }*/
+}
+.platsindex .photoindex .verticale img {
+  position: absolute;
+  bottom: -40px;
 }
 .platsindex .photoindex img {
   width: 100%;
-  object-position: left bottom;
 }
 .platsindex .photoindex .name_index {
   background-color: #fff;
@@ -82,7 +82,6 @@ a {
 /*Localisation et présentation*/
 .localisation {
   background-color: #e4e4e4;
-  width: 100%;
   text-align: center;
   vertical-align: text-top;
   color: #353535;
@@ -178,24 +177,29 @@ header i {
 .header {
   box-shadow: 0px 2px 5px 6px #a8a8a8;
   /*ajouter l'ombre sous le titre*/
-  margin: 7px 0px;
 }
 
 .photoresto {
-  height: 250px;
+  height: 310px;
   overflow: hidden;
+  position: relative;
 }
 .photoresto img {
   width: 100%;
 }
 .photoresto .name {
-  background-color: #fff;
   border-top-left-radius: 1.5em;
   border-top-right-radius: 1.5em;
+  background-color: #f3f0f0;
+  width: 100%;
+  position: absolute;
+  padding: 10px 0px;
+  bottom: 0%;
+}
+.photoresto .name p {
   font-family: "Shrikhand";
   font-size: 1.7em;
-  background-color: #f3f0f0;
-  width: 100vw;
+  padding-left: 15px;
 }
 .photoresto figcaption {
   position: relative;
@@ -204,14 +208,15 @@ header i {
   position: absolute;
   right: 9%;
   top: 23%;
-  font-size: 0.85em;
+  font-size: 1.4em;
   font-weight: 100;
   border: none;
   background-color: transparent;
 }
 
 .verticale img {
-  object-position: 50% 50%;
+  position: absolute;
+  bottom: -40px;
 }
 
 .contentbox {
@@ -310,11 +315,80 @@ em {
   padding: 20px 0px;
 }
 
+@media screen and (min-width: 500px) {
+  body, main, .photoresto, header, .localisation {
+    margin: 0px 5%;
+  }
+}
+@media screen and (min-width: 550px) and (max-width: 650px) {
+  .photoresto {
+    height: 350px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+
+  .verticale img {
+    bottom: -100px;
+    flex-basis: 50%;
+  }
+}
+@media screen and (min-width: 570px) and (max-width: 669px) {
+  .platsindex .photoindex {
+    height: 350px;
+  }
+  .platsindex .photoindex .verticale img {
+    bottom: -40px;
+  }
+}
+@media screen and (min-width: 670px) and (max-width: 769px) {
+  .platsindex .photoindex {
+    height: 400px;
+  }
+  .platsindex .photoindex .verticale img {
+    bottom: -40px;
+  }
+}
+@media screen and (min-width: 770px) and (max-width: 865px) {
+  .platsindex .photoindex {
+    height: 450px;
+  }
+  .platsindex .photoindex .verticale img {
+    bottom: -40px;
+  }
+}
+@media screen and (min-width: 651px) and (max-width: 750px) {
+  .photoresto {
+    height: 400px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+
+  .verticale img {
+    bottom: -80px;
+    flex-basis: 50%;
+  }
+}
+@media screen and (min-width: 751px) and (max-width: 864px) {
+  .photoresto {
+    height: 450px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+
+  .verticale img {
+    bottom: -60px;
+    flex-basis: 50%;
+  }
+}
 @media screen and (min-width: 865px) {
   /*général*/
   body, main {
     flex-flow: row wrap;
-    flex-basis: 50%;
+    flex-basis: 48%;
+    margin: 0px 10px 0px 0px;
   }
 
   main.grid {
@@ -322,32 +396,51 @@ em {
     margin-left: 5%;
   }
 
-  header, footer {
+  header, .localisation {
     flex-basis: 100%;
+    margin: 0px 1%;
   }
 
   /*menu*/
   .photoresto {
     text-align: center;
     width: 100%;
-    flex-basis: 50%;
+    flex-basis: 48%;
     height: auto;
+    margin: 0px 0px 0px 23px;
+    position: relative;
+  }
+  .photoresto img {
+    margin-top: 40px;
+  }
+  .photoresto figcaption {
+    position: absolute;
+    top: 0%;
+  }
+  .photoresto.verticale img {
+    top: 0%;
+    left: 0%;
+    flex-basis: 50%;
   }
   .photoresto .name {
     border: 2px solid #99E2D0;
     border-radius: 0px;
     flex-basis: 50%;
-    width: 99%;
+    width: 100%;
     background-color: #fff;
     padding: 10px 0px;
+    border-bottom: none;
+    border-right: none;
+    height: 40px;
   }
-  .photoresto .name i {
-    top: 30%;
+  .photoresto .name p {
+    padding: 0px;
+  }
+  .photoresto .name .heart {
+    position: absolute;
+    top: 25%;
   }
 
-  /*.button{
-
-  }*/
   /*contentbox*/
   .contentbox.menu {
     flex-flow: column;
@@ -360,6 +453,10 @@ em {
 
   main h3 {
     flex-basis: 100%;
+  }
+
+  .plats .button {
+    margin-left: 25%;
   }
 
   /*index*/
@@ -379,8 +476,8 @@ em {
   .grid .platsindex {
     grid-area: platsindex;
   }
-  .grid .photoindex {
-    height: 500px;
+  .grid .photoindex img {
+    width: 100%;
   }
 
   /* footer */
@@ -388,6 +485,40 @@ em {
     flex-flow: row;
     justify-content: space-around;
     padding: 30px 5% 50px 5%;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 970px) and (max-width: 1169px) {
+  .platsindex .photoindex {
+    height: 350px;
+  }
+  .platsindex .photoindex .verticale img {
+    bottom: -40px;
+  }
+  .platsindex .photoindex .name_index i {
+    left: 80%;
+  }
+}
+@media screen and (min-width: 1170px) and (max-width: 1299px) {
+  .platsindex .photoindex {
+    height: 400px;
+  }
+  .platsindex .photoindex .verticale img {
+    bottom: -40px;
+  }
+  .platsindex .photoindex .name_index i {
+    left: 82%;
+  }
+}
+@media screen and (min-width: 1300px) and (max-width: 2000px) {
+  .platsindex .photoindex {
+    height: 450px;
+  }
+  .platsindex .photoindex .verticale img {
+    bottom: -80px;
+  }
+  .platsindex .photoindex .name_index i {
+    left: 85%;
   }
 }
 @keyframes spinner {
@@ -399,6 +530,17 @@ em {
   }
   100% {
     transform: scale(2) rotate(1080deg);
+  }
+}
+@keyframes loader {
+  0% {
+    transform: translateX(0%);
+  }
+  99% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(1000%);
   }
 }
 /*@keyframes loader{
@@ -454,17 +596,14 @@ em {
 
 @keyframes allofheart {
   0% {
-    font-weight: 300;
     color: linear-gradient(160deg, #FF79DA 2%, #9356DC);
     opacity: 0.2;
   }
   30% {
-    font-weight: 400;
     color: #9356DC;
     opacity: 0.3;
   }
   40% {
-    font-weight: 500;
     color: #9356DC;
     opacity: 0.4;
   }
@@ -490,7 +629,7 @@ em {
   }
   100% {
     font-weight: 900;
-    color: #9356DC;
+    color: linear-gradient(160deg, #FF79DA 2%, #9356DC);
     opacity: 1;
   }
 }
@@ -503,20 +642,6 @@ em {
   animation: allofheart 1.5s ease-out forwards;
 }
 
-/*.fa-heart .heart{
-    background-color: $primary-color;
-    height: 0%;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    transition: all 2s ease-out;
-    z-index: -1;
-}
-
-.fa-heart:hover .heart{
-    height: 100%;
-}*/
 .contentbox.menu:hover {
   box-shadow: 0px 1px 1px 0px #000;
 }
@@ -568,30 +693,30 @@ em {
   animation: ellipsis 400ms forwards;
 }
 
-.loader {
-  animation: loader 3s;
-  margin: 0;
-  background: linear-gradient(160deg, #FF79DA 2%, #9356DC);
-  z-index: 9998;
-  width: 100vw;
-  height: 100vh;
-  text-align: center;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+/*.loader{
+    animation: loader 3s forwards 150ms;
+    margin: 0;
+    background: $gradient-color;
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.spinner {
-  animation: spinner 2700ms forwards 150ms;
-  z-index: 9999;
-  border: 3px solid #99E2D0;
-  border-radius: 50px;
-  width: 100px;
-  height: 20px;
-  font-family: "Shrikhand";
-  font-weight: 500;
-  font-size: 1em;
-}
+.spinner{
+    animation: spinner 2700ms forwards 150ms;
+    border: 3px solid $tertiary-color;
+    border-radius: 50px;
+    width: 100px;
+    height: 20px;
+    font-family: 'Shrikhand';
+    font-weight: 500;
+    font-size: 1em;
+}*/
 
 /*# sourceMappingURL=style.css.map */
