--- a/style.css
+++ b/style.css
@@ -693,30 +693,30 @@ em {
   animation: ellipsis 400ms forwards;
 }
 
-/*.loader{
-    animation: loader 3s forwards 150ms;
-    margin: 0;
-    background: $gradient-color;
-    position: absolute;
-    z-index: 3;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.loader {
+  animation: loader 3s forwards 150ms;
+  margin: 0;
+  background: linear-gradient(160deg, #FF79DA 2%, #9356DC);
+  position: absolute;
+  z-index: 3;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.spinner{
-    animation: spinner 2700ms forwards 150ms;
-    border: 3px solid $tertiary-color;
-    border-radius: 50px;
-    width: 100px;
-    height: 20px;
-    font-family: 'Shrikhand';
-    font-weight: 500;
-    font-size: 1em;
-}*/
+.spinner {
+  animation: spinner 2700ms forwards 150ms;
+  border: 3px solid #99E2D0;
+  border-radius: 50px;
+  width: 100px;
+  height: 20px;
+  font-family: "Shrikhand";
+  font-weight: 500;
+  font-size: 1em;
+}
 
 /*# sourceMappingURL=style.css.map */
