--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header i {
 }
 
 .photoresto {
-  height: 310px;
+  height: 290px;
   overflow: hidden;
   position: relative;
 }
@@ -317,9 +317,22 @@ em {
     margin: 0px 5%;
   }
 }
+@media screen and (min-width: 450px) and (max-width: 549px) {
+  .photoresto {
+    height: 310px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+
+  .verticale img {
+    bottom: -100px;
+    flex-basis: 50%;
+  }
+}
 @media screen and (min-width: 550px) and (max-width: 650px) {
   .photoresto {
-    height: 350px;
+    height: 335px;
   }
   .photoresto img {
     height: auto;
@@ -356,7 +369,7 @@ em {
 }
 @media screen and (min-width: 651px) and (max-width: 750px) {
   .photoresto {
-    height: 400px;
+    height: 380px;
   }
   .photoresto img {
     height: auto;
