--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ header i {
 }
 
 .photoresto {
-  height: 290px;
+  height: 280px;
   overflow: hidden;
   position: relative;
 }
@@ -317,9 +317,30 @@ em {
     margin: 0px 5%;
   }
 }
-@media screen and (min-width: 450px) and (max-width: 549px) {
+@media screen and (min-width: 400px) and (max-width: 450px) {
   .photoresto {
-    height: 310px;
+    height: 300px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+
+  .verticale img {
+    bottom: -100px;
+    flex-basis: 50%;
+  }
+}
+@media screen and (min-width: 450px) and (max-width: 500px) {
+  .photoresto {
+    height: 340px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+}
+@media screen and (min-width: 500px) and (max-width: 550px) {
+  .photoresto {
+    height: 300px;
   }
   .photoresto img {
     height: auto;
@@ -332,7 +353,7 @@ em {
 }
 @media screen and (min-width: 550px) and (max-width: 650px) {
   .photoresto {
-    height: 335px;
+    height: 340px;
   }
   .photoresto img {
     height: auto;
@@ -367,7 +388,7 @@ em {
     bottom: -40px;
   }
 }
-@media screen and (min-width: 651px) and (max-width: 750px) {
+@media screen and (min-width: 650px) and (max-width: 750px) {
   .photoresto {
     height: 380px;
   }
@@ -380,7 +401,7 @@ em {
     flex-basis: 50%;
   }
 }
-@media screen and (min-width: 751px) and (max-width: 864px) {
+@media screen and (min-width: 750px) and (max-width: 865px) {
   .photoresto {
     height: 450px;
   }
