--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a {
 .platsindex .photoindex {
   border-radius: 25px;
   position: relative;
-  height: 320px;
+  height: 280px;
   overflow: hidden;
   margin: 10px 0px;
 }
@@ -177,7 +177,7 @@ header i {
 }
 
 .photoresto {
-  height: 280px;
+  height: 250px;
   overflow: hidden;
   position: relative;
 }
@@ -203,7 +203,7 @@ header i {
 }
 .photoresto figcaption .heart {
   position: absolute;
-  right: 9%;
+  right: 4%;
   top: 23%;
   font-size: 1.4em;
   font-weight: 100;
@@ -316,9 +316,16 @@ em {
     margin: 0px 5%;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 389) {
-  .contentbox.menu .texte {
-    width: 30%;
+@media screen and (min-width: 319px) and (max-width: 400) {
+  .photoresto {
+    height: 250px;
+  }
+  .photoresto img {
+    height: auto;
+  }
+
+  .platsindex .photoindex {
+    height: 200px;
   }
 }
 @media screen and (min-width: 400px) and (max-width: 450px) {
@@ -333,6 +340,10 @@ em {
     bottom: -100px;
     flex-basis: 50%;
   }
+
+  .platsindex .photoindex {
+    height: 300px;
+  }
 }
 @media screen and (min-width: 450px) and (max-width: 500px) {
   .photoresto {
@@ -340,6 +351,11 @@ em {
   }
   .photoresto img {
     height: auto;
+  }
+}
+@media screen and (min-width: 450px) and (max-width: 570px) {
+  .platsindex .photoindex {
+    height: 350px;
   }
 }
 @media screen and (min-width: 500px) and (max-width: 550px) {
